--- a/main.css
+++ b/main.css
@@ -1,4 +1,31 @@
+html,
+body,
+.view {
+  height: 100%; }
 
+/* Half Page Carousel itself*/
+.carousel {
+  height: 50%; }
+  .carousel .carousel-inner {
+    height: 100%; }
+    .carousel .carousel-inner .carousel-item,
+    .carousel .carousel-inner .active {
+      height: 100%; }
+
+
+
+
+.page-footer {
+  background-color: #929FBA;
+   }
+
+   
+   html,
+    body,
+    header,
+    .carousel {
+      height: 60vh;
+    }
 .main{
 	margin: 20px;
 }
